syntax = "proto3";

package smartdevice;


option java_multiple_files = true;
option java_package = "com.jackgallaher.smartpda";
option java_outer_classname = "SmartDevicePdaImpl";
 
service smartPda{
	rpc switchOn(Empty) returns (PowerStatus) {}
    rpc switchOff(Empty) returns (PowerStatus) {}
    rpc getAppointments (Date) returns (stream Appointment) {}  
    rpc getToDoList (stream Day) returns (stream ToDoList) {}
    rpc getMP3AndMP4Files (Type) returns (stream PlayableFiles) {}
} 

message PowerStatus{
  bool status = 1;
}

message Date{
    string date = 1;
}

message Appointment {
    string title = 1;
    string note = 2;
    string time = 3;
    string date = 4;    
}

message Day{
    string day = 1;
}

message ToDoList {
	string day = 1;
	string todo = 2;
}

message Empty {

}

message Type {
	string type = 2;
}

message PlayableFiles{
	string filename = 1;
	string type = 2;
}